--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+  "name": "acadrev-backend",
+  "version": "1.0.0",
+  "description": "Academic Review Backend API",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -11,5 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
